--- a/laptopService/package.json
+++ b/laptopService/package.json
@@ -10,8 +10,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "async": "^3.2.4",
+        "aws-sdk": "^2.1472.0",
         "cookie-parser": "^1.4.6",
         "debug": "^4.3.4",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "http-errors": "^2.0.0",
         "morgan": "^1.10.0",
